<resources>
    <string name="app_name">MarketAplication</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Your Name</string>
    <string name="last_name">Your Last Name</string>
    <string name="register_form">Register Form</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="terms">I Acept the Terms and Conditions</string>
    <string name="read_terms">Read the Terms</string>
    <string name="title_terms">Website and application privacy policy</string>
    <string name="terms_long">The privacy policy of a website or application is the document through which users are informed of the personal data that will be collected and how it will be used, as well as the rights they have with respect to such data. In Colombia, Law 1581 of 2012 establishes the duty to inform users how the personal data they provide to any person, whether natural or legal (companies, societies, foundations, entities, etc.), will be treated.</string>
    <string name="acept_terms">Acept the Terms</string>
    <string name="back">Back</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>